<resources>
    <string name="app_name">Dragonsbane NeuroCog</string>
    <string name="welcome">Welcome to NeuroCog!</string>
    <!-- Main Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="bac">BAC</string>
    <string name="usernameRequired">Username is required.</string>
    <string name="passwordRequired">Password is required.</string>
    <string name="passwordFailed">Wrong password.</string>
    <string name="baseline">Baseline</string>
    <string name="startTest">Start Test</string>
    <string name="clearProfile">Clear Profile</string>
    <string name="mainInstructions">Enter Alias and Password. If alias not known, a new profile will be created. Add BAC if this is for training the application. Select baseline if this is your first time using it. Baselines and training can not be of the same test.</string>
    <string name="baselineRequired">No baseline test found in profile. An unimpaired baseline is required prior to impairment testing.</string>
    <string name="profileCleared">Profile was cleared successfully.</string>
    <!-- Memory Test Results Fragment -->
    <string name="resultsType">Type</string>
    <string name="resultsTotal">Total</string>
    <string name="resultsMin">Min</string>
    <string name="resultsMax">Max</string>
    <string name="resultsAvg">Avg</string>
    <string name="success">Success</string>
    <string name="misses">Misses</string>
    <string name="negative">Negative</string>
    <string name="inappropriate">Inappropriate</string>
    <!-- Pre-Test Activity -->
    <string name="tapScreenTurnTile">Tap the card when it turns over ASAP. Response times are measured.</string>
    <string name="preTestResultsDescription">Pre-Test Results in Milliseconds</string>
    <string name="preTestMSBetween1stFlippedAndClickedScore">1st</string>
    <string name="preTestMSBetween2ndFlippedAndClickedScore">2nd</string>
    <string name="preTestMSBetween3rdFlippedAndClickedScore">3rd</string>
    <string name="preTestMSBetween4thFlippedAndClickedScore">4th</string>
    <string name="preTestMSBetween5thFlippedAndClickedScore">5th</string>
    <string name="preTestMSAverageScore">Avg</string>
    <!-- Simple Memory Test Activity -->
    <string name="tapScreenOneBefore">Tap the card if it is one back.</string>
    <!-- Complex Memory Test Activity -->
    <string name="tapScreenTwoBefore">Tap the card if it is two back.</string>
    <!-- Working Memory Test Activity -->
    <string name="tapScreenIfSeen">Tap the card if it occurred in this testing session.</string>
    <!-- Test Report Activity -->
    <string name="reportPreTestScoreText">Pre-Test</string>
    <string name="reportSimpleMemoryTestText">Simple</string>
    <string name="reportComplexMemoryTestText">Complex</string>
    <string name="reportWorkingMemoryTestText">Working</string>
    <!-- Test History Activity -->
    <string name="home">Home</string>
    <!-- Test Population Activity -->

    <!-- Export History Activity -->
    <string name="exportHistoryTitle">Export</string>

    <!-- General -->
    <string name="notImpaired">Passed! Continue&#8230;</string>
    <string name="borderlineImpairment">Borderline. Personal judgement recommended.</string>
    <string name="impaired">Impaired. Take the day off?</string>
    <string name="grossImpairment">Grossly Impaired. Call for help.</string>
    <string name="testResults">Test Results</string>
    <string name="testHistory">Test History</string>
    <string name="nextTest">Next</string>
    <string name="sendResults">Send Results</string>
    <string name="sendHistory">Send History</string>
    <string name="endTest">End Test</string>
    <string name="accurateResponseRate">Accurate Response Rate</string>
    <string name="accurateResponseTime">Accurate Response Time</string>
    <string name="foilResponseTime">Foil Response Time</string>
    <string name="totalScore">Overall Result</string>
</resources>
