<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:icon="@mipmap/ic_db"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"/>

    <EditText
        android:id="@+id/mainEditUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alice"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/mainEditPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1234"
        android:hint="@string/password"/>

    <CheckBox
        android:id="@+id/mainBaseline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baseline"
        android:textSize="15sp"
        android:checked="true"/>

    <Button
        android:id="@+id/mainButtonStartTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTest"
        android:onClick="verifyDID"/>

    <Button
        android:id="@+id/mainButtonClearProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearProfile"
        android:onClick="clearProfile"/>

    <TextView
        android:id="@+id/mainTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="invisible" />

</LinearLayout>
