<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".neurocog.ui.TestReportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="20dp"
        android:text="@string/testResults"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/reportResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reportButtonEndTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="endTest"
        android:text="@string/endTest" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/reportTotalScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reportTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#181641" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/reportPreTestScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportPreTestScoreText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reportPreTestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/reportSimpleMemoryTestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportSimpleMemoryTestText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reportSimpleMemoryTestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/reportComplexMemoryTestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportComplexMemoryTestText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reportComplexMemoryTestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/reportWorkingMemoryTestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportWorkingMemoryTestText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reportWorkingMemoryTestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>
