<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pre_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:scrollbarTrackVertical="@color/colorPrimary"
    tools:context=".neurocog.PreTestActivity">

    <TextView
        android:id="@+id/mainTextWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="20dp"
        android:text="@string/tapScreenTurnTile"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/preTestCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/card_back"
        android:maxHeight="40dp"
        android:onClick="clickCard" />

    <Button
        android:id="@+id/preTestButtonNextTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="nextTest"
        android:text="@string/nextTest"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/preTestResultDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="2dp"
        android:visibility="invisible"
        android:text="@string/preTestResultsDescription"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/preTestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <View
            android:layout_height="2dip"
            android:background="@color/colorPrimaryDark" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSBetween1stFlippedAndClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSBetween1stFlippedAndClickedScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSBetween1stFlippedAndClickedScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSBetween2ndFlippedAndClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSBetween2ndFlippedAndClickedScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSBetween2ndFlippedAndClickedScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSBetween3rdFlippedAndClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSBetween3rdFlippedAndClickedScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSBetween3rdFlippedAndClickedScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSBetween4thFlippedAndClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSBetween4thFlippedAndClickedScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSBetween4thFlippedAndClickedScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSBetween5thFlippedAndClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSBetween5thFlippedAndClickedScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSBetween5thFlippedAndClickedScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@color/colorPrimaryDark" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSAverageScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSAverageScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@color/colorPrimaryDark" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/preTestMSAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preTestMSAverageScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preTestMSAverageScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>
