<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".tests.TestHistoryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="20dp"
        android:text="@string/testHistory"
        android:textSize="30sp" />

    <!--<Button-->
        <!--android:id="@+id/reportButtonSendResults"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:onClick="sendHistory"-->
        <!--android:text="@string/sendHistory" />-->

    <Button
        android:id="@+id/reportButtonEndTest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="returnHome"
        android:text="@string/home" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/reportTotalScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalScore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reportTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#181641" />

    </TableLayout>

    <Button
        android:id="@+id/reportButtonEndTest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="returnHome"
        android:text="@string/home" />

</LinearLayout>
